--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,20 @@
 
 * {
   margin: 0;
-  box-sizing: border-box;
+  padding: 0;
   font-family: 'Inter', sans-serif;
+}
+
+div {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 body {
   margin: 0;
   min-height: 100vh;
-  /* background: #121212;
-  color: #ffffff; */
+  background-color: var(--color-black-primary);
 }
 
 a {
