--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,6 @@
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif;
-}
-
-div {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -31,4 +28,9 @@ button {
 
 img {
   display: block;
+}
+
+ul li {
+  list-style: none;
+  padding: 2px 0;
 }
