--- a/src/components/GenresBox/GenresBox.css
+++ b/src/components/GenresBox/GenresBox.css
@@ -1,13 +1,25 @@
 .genres-box-container {
-  display: flex;
-  flex-direction: column;
+  padding: 10px 0;
+  width: 100%;
+  float: left;
   border-right: 1px solid var(--color-grey);
-  padding: 0 16px;
-  gap: 10px;
+  border-left: 1px solid var(--color-grey);
+  border-bottom: 1px solid var(--color-grey);
+}
+
+.genres-box-container-item {
+  width: 50%;
+  float: left;
+  padding: 2px 14px;
 }
 
 .genres-box-container-item-link {
   font-size: 12px;
   text-align: left;
   color: var(--color-yellow);
+  display: inline; /* Esto es para que el area del link este restringido al texto */
+}
+
+.genres-box-container-item:nth-child(odd) {
+  border-right: 1px solid var(--color-grey);
 }
