--- a/src/components/AnimesByGenre/AnimesByGenre.css
+++ b/src/components/AnimesByGenre/AnimesByGenre.css
@@ -1,7 +1,7 @@
 .animesbygenre-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 740px;
 }
 
 .animesbygenre-container-header {
