--- a/src/components/AnimesBox/AnimesBox.css
+++ b/src/components/AnimesBox/AnimesBox.css
@@ -1,7 +1,7 @@
 .animesbox-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
   padding: 16px 16px;
   gap: 16px;
