--- a/src/components/OptionsVertical/OptionsVertical.css
+++ b/src/components/OptionsVertical/OptionsVertical.css
@@ -1,6 +1,6 @@
 .options-vertical-container-options {
   height: 20px;
-  border: 1px solid var(--color-black-secondary);
+  border: 1.5px solid var(--color-black-secondary);
   background-color: unset;
   color: var(--color-black-secondary);
   outline: none;
@@ -8,6 +8,7 @@
     border-color 0.3s,
     box-shadow 0.3s;
   font-size: 12px;
+  font-weight: 700;
 }
 
 .options-vertical-container-option {
