--- a/src/components/AnimeInfo/AnimeInfo.css
+++ b/src/components/AnimeInfo/AnimeInfo.css
@@ -65,3 +65,9 @@
   flex-direction: column;
   gap: 12px;
 }
+
+.anime-info-content-info-subinfo-trailer {
+  width: 375px;
+  height: 225px;
+  border-width: 1px;
+}
