Cambios en estilos de enlaces

--- a/src/components/AnimesBox/AnimesBox.css
+++ b/src/components/AnimesBox/AnimesBox.css
@@ -37,3 +37,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.animesbox-container-anime:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+}
