--- a/src/components/GenresBox/GenresBox.css
+++ b/src/components/GenresBox/GenresBox.css
@@ -20,6 +20,10 @@
   display: inline; /* Esto es para que el area del link este restringido al texto */
 }
 
+.genres-box-container-item-link:hover {
+  color: var(--color-white);
+}
+
 .genres-box-container-item:nth-child(odd) {
   border-right: 1px solid var(--color-grey);
 }
