--- a/src/components/AnimesSectionHeader/AnimesSectionHeader.css
+++ b/src/components/AnimesSectionHeader/AnimesSectionHeader.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   background-color: #ffcc00;
   padding: 9px 16px;
+  height: 38px;
 }
 
 .animeSectionHeader-container-title {
