--- a/src/styles/PagesStyleBase.css
+++ b/src/styles/PagesStyleBase.css
@@ -30,3 +30,9 @@
   flex-direction: column;
   gap: 12px;
 }
+
+.page-container-content-animesection-content-options {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
