--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -14,7 +14,7 @@
   outline: none;
   background-color: var(--color-black-secondary);
   caret-color: var(--color-yellow);
-  color: var(--color-grey);
+  color: var(--color-yellow);
   font-size: 12px;
   font-weight: 400;
 }
