--- a/src/components/Genres/Genres.css
+++ b/src/components/Genres/Genres.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 284px;
+  max-width: 284px;
+  width: 100%;
   float: right;
 }
