--- a/src/components/GenresBox/GenresBox.css
+++ b/src/components/GenresBox/GenresBox.css
@@ -1,6 +1,6 @@
 .genres-box-container {
   padding: 10px 0;
-  width: 100%;
+  /* width: 100%; */
   float: left;
   border-right: 1px solid var(--color-grey);
   border-left: 1px solid var(--color-grey);
