--- a/src/styles/PagesStyleBase.css
+++ b/src/styles/PagesStyleBase.css
@@ -8,7 +8,7 @@
 .page-container-content {
   display: flex;
   flex-direction: column;
-  width: 1080px;
+  max-width: 1080px;
   background-color: var(--color-black-secondary);
   padding: 0 16px;
   flex-grow: 1;
