--- a/src/components/Genres/Genres.css
+++ b/src/components/Genres/Genres.css
@@ -2,7 +2,12 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  max-width: 284px;
   width: 100%;
   float: right;
+}
+
+@media (min-width: 768px) {
+  .genrethemes-box {
+    max-width: 284px;
+  }
 }
