--- a/src/components/GenresBox/GenresBox.css
+++ b/src/components/GenresBox/GenresBox.css
@@ -8,9 +8,8 @@
 }
 
 .genres-box-container-item {
-  width: 50%;
   float: left;
-  padding: 2px 14px;
+  padding: 2px 0px 2px 14px;
 }
 
 .genres-box-container-item-link {
@@ -24,6 +23,12 @@
   color: var(--color-white);
 }
 
-.genres-box-container-item:nth-child(odd) {
-  border-right: 1px solid var(--color-grey);
+@media (min-width: 768px) {
+  .genres-box-container-item {
+    width: 50%;
+  }
+
+  .genres-box-container-item:nth-child(odd) {
+    border-right: 1px solid var(--color-grey);
+  }
 }
