--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -10,6 +10,13 @@
   border: 1px solid var(--color-yellow);
 }
 
+.menu-button-icon {
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  border: 1px solid var(--color-yellow);
+}
+
 .menu-button-line {
   width: 100%;
   height: 2px;
@@ -28,11 +35,18 @@
   justify-content: start;
   align-items: flex-start;
   z-index: 10;
-  background-color: var(--color-grey);
+  background-color: var(--color-black-secondary);
   transition: transform 0.3s ease-in-out;
 }
 
-.menu-container-block-background {
+.menu-drop-down-header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.menu-block-background {
   position: absolute;
   top: 0;
   left: 0;
@@ -40,7 +54,7 @@
   min-width: 100vw;
   z-index: 5;
   opacity: 0.5;
-  background-color: var(--color-black-dark);
+  background-color: var(--color-black-tertiary);
 }
 
 .open {
