--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,8 @@
 .navbar-container {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
   padding: 0px 12px;
   width: 100%;
 }
@@ -21,4 +22,14 @@
 .navbar-container-nav.active {
   color: var(--color-yellow);
   border-bottom: 2px solid var(--color-yellow);
+}
+
+@media (min-width: 768px) {
+  .navbar-container {
+    display: flex;
+    gap: 8px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
