--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -9,6 +9,12 @@
 
 .header-container-title {
   color: var(--color-yellow);
-  font-size: 40px;
+  font-size: 24px;
   font-weight: 400;
+}
+
+@media (min-width: 768px) {
+  .header-container-title {
+    font-size: 40px;
+  }
 }
