--- a/src/components/AnimesBox/AnimesBox.css
+++ b/src/components/AnimesBox/AnimesBox.css
@@ -25,7 +25,7 @@
   width: 100%;
   height: 100%;
   max-height: 225px;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .animesbox-container-anime-title {
