Fix: image aspect ratio on anime info page

--- a/src/components/AnimeInfo/AnimeInfo.css
+++ b/src/components/AnimeInfo/AnimeInfo.css
@@ -22,7 +22,7 @@
   height: 100%;
   max-width: 288px;
   max-height: 368px;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .anime-info-content-info {
